--- a/css/style.css
+++ b/css/style.css
@@ -33,7 +33,7 @@ abbr, acronym {
 	border:0
 }
 body {
-	font-family:"Open Sans", sans-serif;
+	font-family:"Verdana", sans-serif;
 	font-size:14px;
 	line-height:22px;
 	color:#0F0F0F;
